objects/Account_Alert__c.object
<CustomObject>
    <fields>
        <fullName>Account_Alert_Expiry__c</fullName>
        <label>Account Alert Expiry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Alerts</relationshipLabel>
        <relationshipName>Account_Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Active_Alert__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alert_Category__c</fullName>
        <label>Alert Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Governance</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Customer Service</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alert_Description__c</fullName>
        <label>Alert Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Alert_Subject__c</fullName>
        <label>Alert Subject</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AR Hold</fullName>
                </value>
                <value>
                    <fullName>Collection Issue(s)</fullName>
                </value>
                <value>
                    <fullName>Outstanding Debt Collection Pending</fullName>
                </value>
                <value>
                    <fullName>Replicating Client (Elite)</fullName>
                </value>
                <value>
                    <fullName>Sales Process Underway</fullName>
                </value>
                <value>
                    <fullName>Sanctioned Account</fullName>
                </value>
                <value>
                    <fullName>Serial Trial Requester</fullName>
                </value>
                <value>
                    <fullName>Serious Complaint</fullName>
                </value>
                <value>
                    <fullName>Strategic Account Merger</fullName>
                </value>
                <value>
                    <fullName>Support Hold</fullName>
                </value>
                <value>
                    <fullName>Other (See Description for Information)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Severity__c</fullName>
        <label>Alert Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Severe</fullName>
                </value>
                <value>
                    <fullName>Important</fullName>
                </value>
                <value>
                    <fullName>Informational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System_ID__c</fullName>
        <label>Source System ID</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_BU__c</fullName>
        <label>Sub-BU</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Elite</fullName>
                </value>
                <value>
                    <fullName>UKI</fullName>
                </value>
                <value>
                    <fullName>USL</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Account Alert</label>
    <nameField>
        <displayFormat>AA-{0000000}</displayFormat>
        <label>Account Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Alerts</pluralLabel>
    <recordTypes>
        <fullName>Account_Alert</fullName>
        <active>true</active>
        <description>Record Type for GLI created Account Alerts</description>
        <label>Account Alert</label>
    </recordTypes>
    <recordTypes>
        <fullName>Integration_Account_Alert</fullName>
        <active>true</active>
        <description>Record Type for Account Alerts created via integration</description>
        <label>Integration Account Alert</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Expiry_Date_Must_be_Greater_than_Today</fullName>
        <active>true</active>
        <description>For Account Alerts the Expiry Date cannot be less than creation date.</description>
        <errorConditionFormula>AND( 
$Profile.Name &lt;&gt; &apos;System Administrator&apos;, 
OR( 
AND(ISNEW(), Account_Alert_Expiry__c &lt; Today()), 
AND(NOT(ISNEW()), Account_Alert_Expiry__c &lt; DATEVALUE(CreatedDate)) 
) 
)</errorConditionFormula>
        <errorDisplayField>Account_Alert_Expiry__c</errorDisplayField>
        <errorMessage>Account Alert Expiry Date must be greater than the Alert creation date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiry_Date_must_be_less_than_18_months</fullName>
        <active>true</active>
        <description>For Account Alerts with an Alert Category of ‘Sales’, ‘Customer Service’ or ‘Financial’, the Expiry Date cannot exceed 18 months from creation date.  Exception: Alerts created via integration.</description>
        <errorConditionFormula>AND( 
/*$Profile.Name &lt;&gt; &apos;System Administrator&apos;,*/ 
NOT(ISNULL(TEXT(Alert_Category__c))),
NOT(ISPICKVAL(Alert_Category__c, &quot;Governance&quot;)), 
NOT(ISBLANK(Account_Alert_Expiry__c)),
Account_Alert_Expiry__c &gt; Today() + 548,  
ISBLANK(Source_System__c) 
)</errorConditionFormula>
        <errorDisplayField>Account_Alert_Expiry__c</errorDisplayField>
        <errorMessage>Expiry Date cannot exceed 18 months from creation date.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Expiry_Date_must_be_populated</fullName>
        <active>true</active>
        <description>For Account Alerts with an Alert Category of ‘Sales’, ‘Customer Service’ or ‘Financial’, the Expiry Date cannot be blank. Exception: Alerts created via integration.</description>
        <errorConditionFormula>AND( 
/*$Profile.Name &lt;&gt; &apos;System Administrator&apos;,*/
NOT(ISNULL(TEXT(Alert_Category__c))), 
NOT(ISPICKVAL(Alert_Category__c, &quot;Governance&quot;)), 
ISBLANK(Account_Alert_Expiry__c),
ISBLANK( Source_System__c ) 
)</errorConditionFormula>
        <errorDisplayField>Account_Alert_Expiry__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be blank.</errorMessage>
    </validationRules>
</CustomObject>